dartagnan/src/test/resources/spirv/opencl/gpuverify/benign_race_tests/fail/writezero_nobenign.spvasm
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 21
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpName %A "A"
               OpName %B "B"
               OpName %i "i"
               OpName %j "j"
               OpName %entry "entry"
               OpName %A_addr "A.addr"
               OpName %B_addr "B.addr"
               OpName %i_addr "i.addr"
               OpName %j_addr "j.addr"
               OpName %arrayidx "arrayidx"
               OpDecorate %A_addr Alignment 4
               OpDecorate %B_addr Alignment 4
               OpDecorate %i_addr Alignment 4
               OpDecorate %j_addr Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint %uint %uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%_ptr_Function_uint = OpTypePointer Function %uint
          %6 = OpFunction %void DontInline %5
          %A = OpFunctionParameter %_ptr_Workgroup_uint
          %B = OpFunctionParameter %_ptr_Workgroup_uint
          %i = OpFunctionParameter %uint
          %j = OpFunctionParameter %uint
      %entry = OpLabel
     %A_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
     %B_addr = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
     %i_addr = OpVariable %_ptr_Function_uint Function
     %j_addr = OpVariable %_ptr_Function_uint Function
               OpStore %A_addr %A Aligned 4
               OpStore %B_addr %B Aligned 4
               OpStore %i_addr %i Aligned 4
               OpStore %j_addr %j Aligned 4
         %18 = OpLoad %_ptr_Workgroup_uint %A_addr Aligned 4
   %arrayidx = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %18 %uint_0
               OpStore %arrayidx %uint_0 Aligned 4
               OpReturn
               OpFunctionEnd
